/**
 * ThingsBoard, Inc. ("COMPANY") CONFIDENTIAL
 *
 * Copyright Â© 2016-2020 ThingsBoard, Inc. All Rights Reserved.
 *
 * NOTICE: All information contained herein is, and remains
 * the property of ThingsBoard, Inc. and its suppliers,
 * if any.  The intellectual and technical concepts contained
 * herein are proprietary to ThingsBoard, Inc.
 * and its suppliers and may be covered by U.S. and Foreign Patents,
 * patents in process, and are protected by trade secret or copyright law.
 *
 * Dissemination of this information or reproduction of this material is strictly forbidden
 * unless prior written permission is obtained from COMPANY.
 *
 * Access to the source code contained herein is hereby forbidden to anyone except current COMPANY employees,
 * managers or contractors who have executed Confidentiality and Non-disclosure agreements
 * explicitly covering such access.
 *
 * The copyright notice above does not evidence any actual or intended publication
 * or disclosure  of  this source code, which includes
 * information that is confidential and/or proprietary, and is a trade secret, of  COMPANY.
 * ANY REPRODUCTION, MODIFICATION, DISTRIBUTION, PUBLIC  PERFORMANCE,
 * OR PUBLIC DISPLAY OF OR THROUGH USE  OF THIS  SOURCE CODE  WITHOUT
 * THE EXPRESS WRITTEN CONSENT OF COMPANY IS STRICTLY PROHIBITED,
 * AND IN VIOLATION OF APPLICABLE LAWS AND INTERNATIONAL TREATIES.
 * THE RECEIPT OR POSSESSION OF THIS SOURCE CODE AND/OR RELATED INFORMATION
 * DOES NOT CONVEY OR IMPLY ANY RIGHTS TO REPRODUCE, DISCLOSE OR DISTRIBUTE ITS CONTENTS,
 * OR TO MANUFACTURE, USE, OR SELL ANYTHING THAT IT  MAY DESCRIBE, IN WHOLE OR IN PART.
 */
syntax = "proto3";

option java_package = "org.thingsboard.server.gen.edge";
option java_multiple_files = true;
option java_outer_classname = "EdgeProtos";

package edge;

// Interface exported by the ThingsBoard Edge Transport.
service EdgeRpcService {

  rpc handleMsgs(stream RequestMsg) returns (stream ResponseMsg) {}

}

/**
 * Data Structures;
 */
message RequestMsg {
  RequestMsgType msgType = 1;
  ConnectRequestMsg connectRequestMsg = 2;
  UplinkMsg uplinkMsg = 3;
}

message ResponseMsg {
  ConnectResponseMsg connectResponseMsg = 1;
  UplinkResponseMsg uplinkResponseMsg = 2;
  EntityUpdateMsg entityUpdateMsg = 3;
  DownlinkMsg downlinkMsg = 4;
}

message EntityUpdateMsg {
  DeviceUpdateMsg deviceUpdateMsg = 1;
  RuleChainUpdateMsg ruleChainUpdateMsg = 2;
  RuleChainMetadataUpdateMsg ruleChainMetadataUpdateMsg = 3;
  DashboardUpdateMsg dashboardUpdateMsg = 4;
  AssetUpdateMsg assetUpdateMsg = 5;
  EntityViewUpdateMsg entityViewUpdateMsg = 6;
  AlarmUpdateMsg alarmUpdateMsg = 7;
  UserUpdateMsg userUpdateMsg = 8;
  CustomerUpdateMsg customerUpdateMsg = 9;
}

enum RequestMsgType {
  CONNECT_RPC_MESSAGE = 0;
  UPLINK_RPC_MESSAGE = 1;
}

message ConnectRequestMsg {
  string edgeRoutingKey = 1;
  string edgeSecret = 2;
}

enum ConnectResponseCode {
  ACCEPTED = 0;
  BAD_CREDENTIALS = 1;
  SERVER_UNAVAILABLE = 2;
}

message ConnectResponseMsg {
  ConnectResponseCode responseCode = 1;
  string errorMsg = 2;
  EdgeConfiguration configuration = 3;
}

message EdgeConfiguration {
  int64 tenantIdMSB = 1;
  int64 tenantIdLSB = 2;
  string name = 3;
  string routingKey = 4;
  string type = 5;
  string cloudType = 6;
}

enum UpdateMsgType {
  ENTITY_CREATED_RPC_MESSAGE = 0;
  ENTITY_UPDATED_RPC_MESSAGE = 1;
  ENTITY_DELETED_RPC_MESSAGE = 2;
  ALARM_ACK_RPC_MESSAGE = 3;
  ALARM_CLEAR_RPC_MESSAGE = 4;
  RULE_CHAIN_CUSTOM_MESSAGE = 5;
}

message EntityDataProto {
  string entityName = 1;
  string entityType = 2;
  bytes tbMsg = 3;
}

message RuleChainUpdateMsg {
  UpdateMsgType msgType = 1;
  int64 idMSB = 2;
  int64 idLSB = 3;
  string name = 4;
  int64 firstRuleNodeIdMSB = 5;
  int64 firstRuleNodeIdLSB = 6;
  bool root = 7;
  bool debugMode = 8;
  string configuration = 9;
}

message RuleChainMetadataUpdateMsg {
  UpdateMsgType msgType = 1;
  int64 ruleChainIdMSB = 2;
  int64 ruleChainIdLSB = 3;
  int32 firstNodeIndex = 4;
  repeated RuleNodeProto nodes =  5;
  repeated NodeConnectionInfoProto connections =  6;
  repeated RuleChainConnectionInfoProto ruleChainConnections =  7;
}

message RuleNodeProto {
  int64 idMSB = 1;
  int64 idLSB = 2;
  string type = 3;
  string name = 4;
  bool debugMode = 5;
  string configuration = 6;
  string additionalInfo = 7;
}

message NodeConnectionInfoProto {
  int32 fromIndex = 1;
  int32 toIndex = 2;
  string type = 3;
}

message RuleChainConnectionInfoProto {
  int32 fromIndex = 1;
  int64 targetRuleChainIdMSB = 2;
  int64 targetRuleChainIdLSB = 3;
  string type = 4;
  string additionalInfo = 5;
}

message DashboardUpdateMsg {
  UpdateMsgType msgType = 1;
  int64 idMSB = 2;
  int64 idLSB = 3;
  string title = 4;
  string configuration = 5;
  string groupName = 6;
}

message DeviceUpdateMsg {
  UpdateMsgType msgType = 1;
  string name = 2;
  string type = 3;
  string label = 4;
  string credentialsType = 5;
  string credentialsId = 6;
  string credentialsValue = 7;
  string groupName = 8;
}

message AssetUpdateMsg {
  UpdateMsgType msgType = 1;
  string name = 2;
  string type = 3;
  string label = 4;
  string groupName = 5;
}

message EntityViewUpdateMsg {
  UpdateMsgType msgType = 1;
  string name = 2;
  string type = 3;
  string relatedName = 4;
  string relatedType = 5;
  EdgeEntityType relatedEntityType = 6;
  string groupName = 7;
}

message AlarmUpdateMsg {
  UpdateMsgType msgType = 1;
  string name = 2;
  string type = 3;
  string originatorType = 4;
  string originatorName = 5;
  string severity = 6;
  string status = 7;
  int64 startTs = 8;
  int64 endTs = 9;
  int64 ackTs = 10;
  int64 clearTs = 11;
  string details = 12;
  bool propagate = 13;
}

message CustomerUpdateMsg {
  UpdateMsgType msgType = 1;
  int64 idMSB = 2;
  int64 idLSB = 3;
  string title = 4;
  string country = 5;
  string state = 6;
  string city = 7;
  string address = 8;
  string address2 = 9;
  string zip = 10;
  string phone = 11;
  string email = 12;
  string additionalInfo = 13;
}

message UserUpdateMsg {
  UpdateMsgType msgType = 1;
  string email = 2;
  string authority = 3;
  string firstName = 4;
  string lastName = 5;
  string additionalInfo = 6;
  bool enabled = 7;
  string password = 8;
  string groupName = 9;
}

message RuleChainMetadataRequestMsg {
  int64 ruleChainIdMSB = 1;
  int64 ruleChainIdLSB = 2;
}

enum EdgeEntityType {
  DEVICE = 0;
  ASSET = 1;
}

/**
 * Main Messages;
 */

message UplinkMsg {
  int32 uplinkMsgId = 1;
  repeated EntityDataProto entityData = 2;
  repeated DeviceUpdateMsg deviceUpdateMsg = 3;
  repeated AlarmUpdateMsg alarmUpdateMsg = 4;
  repeated RuleChainMetadataRequestMsg ruleChainMetadataRequestMsg = 5;
}

message UplinkResponseMsg {
  bool success = 1;
  string errorMsg = 2;
}

message DownlinkMsg {
  int32 downlinkMsgId = 1;
  repeated EntityDataProto entityData = 2;
}
